--- a/frontend/src/components/Header/Header.css
+++ b/frontend/src/components/Header/Header.css
@@ -62,6 +62,28 @@ header {
   color: #fff;
 }
 
+#btn-perfil button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 8px 12px;
+  background-color: #ff0000;
+  border-radius: 40px;
+  border: 0;
+  transition: 0.2s;
+  color: #fff;
+  cursor: pointer;
+}
+
+#btn-perfil a {
+  text-decoration: none;
+}
+
+#btn-perfil button i {
+  font-size: 1.3rem;
+  color: #fff;
+}
+
 .menu-btn {
   background: none;
   border: none;
