Landing page médico - 21/08

--- a/frontend/src/components/TopoSite/TopoSite.css
+++ b/frontend/src/components/TopoSite/TopoSite.css
@@ -33,4 +33,9 @@ section.topo-do-site .flex {
         display: none;
     }
 
+    /* BTN-ENTRAR */
+    #btn-perfil {
+        display: none;
+    }
+
 }
