--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -81,6 +81,12 @@ html {
   color: #fff;
 }
 
+.consulta{
+  padding: 180px 8%;
+  width: 100%;
+  height: 100vh;
+}
+
 /* FORMULARIOS */
 .container-form {
   padding: 200px 8%;
