Chat Pronto falta front e criptografia - 13/09

--- a/frontend/src/components/Chat/Chat.css
+++ b/frontend/src/components/Chat/Chat.css
@@ -44,3 +44,8 @@ section.escolha .input-search{
     width: 50%;
     font-size: 14px;
 }
+
+section.chat-container{
+    min-height: 100vh;
+    padding: 180px 8%;
+}
