--- a/frontend/src/components/Chat/Chat.css
+++ b/frontend/src/components/Chat/Chat.css
@@ -39,10 +39,6 @@ section.escolha .card-escolha:hover {
     transition: .2s ease;
 }
 
-span {
-    color: #000;
-}
-
 section.escolha .input-search {
     padding: 0.5rem;
     width: 50%;
@@ -60,7 +56,7 @@ section.chat-container {
 }
 
 .messages {
-    height: 500px;
+    height: 400px;
     margin-top: 10px;
     margin-bottom: 10px;
     padding: 20px 1%;
@@ -69,6 +65,40 @@ section.chat-container {
     flex-direction: column;
     gap: 12px;
     background: #eef3f7;
+}
+
+.messages span {
+    color: #000;
+}
+
+.message.enviada {
+    display: flex;
+    justify-content: flex-end;
+    color: #fff;
+}
+
+.message.enviada .bubble{
+    background: #1E90FF;
+    color: #fff;
+    padding: 10px 15px;
+    border-radius: 15px 15px 0 15px;
+    max-width: 60%;
+    word-wrap: break-word;
+}
+
+.message.recebida {
+    display: flex;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.message.recebida .bubble{
+    background: #e5e5ea;
+    color: #000;
+    padding: 10px 15px;
+    border-radius: 15px 15px 15px 0;
+    max-width: 60%;
+    word-wrap: break-word;
 }
 
 .chat-container .inputs {
