--- a/frontend/src/components/Events/Calendar.css
+++ b/frontend/src/components/Events/Calendar.css
@@ -1,6 +1,6 @@
 .calendar-container {
   min-height: 100vh;
-  padding: 180px;
+  padding: 180px 8%;
   border-radius: 12px;
 }
 
@@ -53,29 +53,109 @@
   background: #0056b3;
 }
 
-.calendar-events ul {
-  list-style: none;
-  padding: 0;
+.card-grid {
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  gap: 20px;
+  margin-top: 20px;
 }
 
-.calendar-events li {
-  background: white;
-  margin-bottom: 12px;
-  padding: 15px;
-  border-radius: 10px;
-  border: 1px solid #ddd;
+.event-card {
+  background: #fff;
+  border-radius: 12px;
+  padding: 20px;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
+  transition: transform 0.2s ease;
 }
 
-.calendar-events button {
-  margin-top: 8px;
-  padding: 6px 12px;
-  background: red;
-  color: white;
+.event-card:hover {
+  transform: translateY(-5px);
+}
+
+.event-title {
+  font-size: 1.2rem;
+  margin-bottom: 10px;
+  color: #2c3e50;
+}
+
+.event-card p {
+  margin: 6px 0;
+  font-size: 0.95rem;
+  color: #444;
+}
+
+.card-buttons {
+  display: flex;
+  justify-content: flex-end;
+  gap: 8px;
+}
+
+
+
+.btn-delete {
+  background: #FF0000;
+  color: #fff;
   border: none;
-  border-radius: 6px;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.btn-delete i{
+  font-size: 20px;
+  color: #fff;
+}
+
+.btn-delete:hover {
+  background: #c0392b;
+}
+
+.btn-edit {
+  background: #007fff;
+  color: #fff;
+  border: none;
+  width: 40px;
+  height: 40px;
+  border-radius: 100%;
+  cursor: pointer;
+  transition: background 0.2s;
+}
+
+.btn-edit i{
+  font-size: 20px;
+  color: #fff;
+}
+
+.btn-edit:hover {
+  background: #020fff;
+}
+
+.pop-up-edit input,
+.pop-up-edit textarea,
+.pop-up-edit button {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+}
+
+.pop-up-edit{
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+}
+
+.pop-up-edit .btn-save{
+  background: #228B22;
+  color: #fff;
+  font-weight: 550;
   cursor: pointer;
 }
 
-.calendar-events button:hover {
-  background: darkred;
+.pop-up-edit .btn-cancel{
+  background: #FF0000;
+  color: #fff;
+  font-weight: 550;
+  cursor: pointer;
 }
