--- a/frontend/src/components/Events/Calendar.css
+++ b/frontend/src/components/Events/Calendar.css
@@ -90,8 +90,6 @@
   gap: 8px;
 }
 
-
-
 .btn-delete {
   background: #FF0000;
   color: #fff;
@@ -144,6 +142,14 @@
   display: flex;
   flex-direction: column;
   gap: 8px;
+}
+
+
+.pop-up-edit .btn-update {
+  background: #007fff;
+  color: #fff;
+  font-weight: 550;
+  cursor: pointer;
 }
 
 .pop-up-edit .btn-save{
